#141: Implement REST-Service
