# Hogajama/hogajama-interfaces/src/main/swagger/hogajama.swagger.yaml
@@ -100,6 +100,39 @@ paths:
           description: Location of the sensor
           schema:
             type: string
+  /pump:
+    get:
+      description: sends data to AMQ-topic to activate pump of specific Habarama-unit
+      operationId: sendPumpMessage
+      parameters:
+        - in: query
+          name: location
+          type: String
+          required: true
+          description: location of the sensor
+        - in: query
+          name: sensorName
+          type: String
+          required: true
+          description: Name of the sensor
+        - in: query
+          name: duration
+          type: integer
+          required: true
+          description: duration of pump activation
+      produces:
+        - text/plain
+      responses:
+        '200':
+          description: message sent successfully
+          schema:
+          type: array
+          items:
+            type: string
+        default:
+          description: unexpected error
+          schema:
+            $ref: '#/definitions/errorModel'
 definitions:
   sensorData:
     type: object
